# vibelang

./: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  flake.nix
crates/vibelang-cli/: Cargo.toml  README.md
crates/vibelang-cli/src/: main.rs  render.rs
crates/vibelang-cli/src/http_server/: mod.rs  models.rs  websocket.rs
crates/vibelang-cli/src/lsp/: analysis.rs  backend.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  mod.rs
crates/vibelang-cli/src/tui/: app.rs  keyboard.rs  layout.rs  logger.rs  mod.rs  os_keyboard.rs  ui.rs
crates/vibelang-core/: Cargo.toml  README.md
crates/vibelang-core/src/: audio_device.rs  events.rs  lib.rs  midi.rs  midi_osc_handler.rs  midi_synthdefs.rs  osc.rs  osc_sender.rs  reload.rs  sample_synthdef.rs  scheduler.rs  score.rs  scsynth.rs  scsynth_process.rs  sequences.rs  timing.rs
crates/vibelang-core/src/api/: audio_device.rs  bar_utils.rs  context.rs  global.rs  group.rs  helpers.rs  melody.rs  midi.rs  mod.rs  pattern.rs  sample.rs  sequence.rs  sfz.rs  synthdef.rs  voice.rs
crates/vibelang-core/src/runtime/: mod.rs  thread.rs
crates/vibelang-core/src/state/: manager.rs  messages.rs  mod.rs  model.rs
crates/vibelang-core/src/validation/: mod.rs
crates/vibelang-dsp/: Cargo.toml  README.md  build.rs
crates/vibelang-dsp/src/: api.rs  builder.rs  encoder.rs  errors.rs  graph.rs  helpers.rs  lib.rs  rhainodes.rs
crates/vibelang-dsp/ugen_manifests/: analysis.json  bufdelays.json  buffers.json  control.json  conversion.json  delays.json  demand.json  dynamics.json  envelopes.json  fft.json  filters.json  granular.json  info.json  inout.json  math.json  multichannel.json  noise.json  oscillators.json  panning.json  physical.json  pitchtime.json  random.json  reverb.json  triggers.json
crates/vibelang-http/: Cargo.toml
crates/vibelang-http/src/: lib.rs  models.rs  websocket.rs
crates/vibelang-http/src/routes/: effects.rs  eval.rs  fades.rs  groups.rs  live.rs  melodies.rs  midi.rs  mod.rs  patterns.rs  samples.rs  sequences.rs  synthdefs.rs  transport.rs  voices.rs
crates/vibelang-keys/: Cargo.toml  README.md
crates/vibelang-keys/src/: config.rs  error.rs  keyboard.rs  lib.rs  main.rs  midi.rs  os_keyboard.rs  ui.rs
crates/vibelang-lsp/: Cargo.toml
crates/vibelang-lsp/src/: analysis.rs  backend.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  lib.rs
crates/vibelang-sfz/: Cargo.toml  README.md
crates/vibelang-sfz/src/: api.rs  lib.rs  loader.rs  region_matcher.rs  synthdef.rs  types.rs
crates/vibelang-sfz/src/parser/: error.rs  mod.rs  parse.rs  path_utils.rs  types.rs
crates/vibelang-std/: Cargo.toml  README.md
crates/vibelang-std/src/: lib.rs
crates/vibelang-std/stdlib/: LIBRARY_SUMMARY.md  QUICK_REF.md  README.md  index.vibe
crates/vibelang-std/stdlib/bass/: index.vibe
crates/vibelang-std/stdlib/bells/: church_bell.vibe  glockenspiel.vibe  index.vibe  marimba.vibe  music_box.vibe  tubular_bells.vibe  vibraphone.vibe  xylophone.vibe
crates/vibelang-std/stdlib/brass/: brass_realistic.vibe  brass_section.vibe  french_horn.vibe  index.vibe  synth_brass.vibe  trombone.vibe  trumpet.vibe  tuba.vibe
crates/vibelang-std/stdlib/cinematic/: braam.vibe  drone_tension.vibe  impact_cinematic.vibe  index.vibe  whoosh_tonal.vibe
crates/vibelang-std/stdlib/drums/: index.vibe
crates/vibelang-std/stdlib/effects/: EFFECTS_INDEX.md  PRESETS.md  QUICK_START.md  README.md  all_effects.vibe  amp_follower.vibe  comb_filter.vibe  dimension_chorus.vibe  ducking_delay.vibe  exciter.vibe  gate.vibe  gverb.vibe  hall_reverb.vibe  highpass.vibe  index.vibe  limiter.vibe  lowpass.vibe  multi_tap_delay.vibe  multiband_comp.vibe  phaser.vibe  ping_pong_delay.vibe  reverb.vibe  reverb_minimal.vibe  ring_mod.vibe  saturator.vibe  spring_reverb.vibe  stereo_enhancer.vibe  stereo_width.vibe  tape_delay.vibe  transient_shaper.vibe  tremolo.vibe  waveshaper.vibe
crates/vibelang-std/stdlib/fx/: index.vibe
crates/vibelang-std/stdlib/keys/: accordion_keys.vibe  celeste.vibe  clavinet.vibe  electric_piano.vibe  grand_piano.vibe  hammond_organ.vibe  harpsichord.vibe  honky_tonk.vibe  index.vibe  mallet_instruments.vibe  mellotron_choir.vibe  mellotron_flute.vibe  mellotron_strings.vibe  organ_b3.vibe  piano_felt.vibe  piano_toy.vibe  pipe_organ.vibe  rhodes_bright.vibe  rhodes_dark.vibe  wurlitzer.vibe
crates/vibelang-std/stdlib/leads/: index.vibe
crates/vibelang-std/stdlib/modern/: dubstep.vibe  future_bass.vibe  hyperpop.vibe  index.vibe  lofi.vibe  serum_style.vibe  synthwave.vibe  trap.vibe
crates/vibelang-std/stdlib/modular/: index.vibe  mod_lfo.vibe  mod_noise.vibe  mod_vco.vibe
crates/vibelang-std/stdlib/orchestral/: brass_stab.vibe  index.vibe  strings_legato.vibe  strings_staccato.vibe  timpani.vibe  wind_chimes.vibe
crates/vibelang-std/stdlib/pads/: index.vibe
crates/vibelang-std/stdlib/retro/: chip_noise.vibe  chip_pulse.vibe  chip_triangle.vibe  index.vibe  sfx_coin.vibe  sfx_jump.vibe  sfx_laser.vibe  sfx_powerup.vibe  synth_80s_brass.vibe
crates/vibelang-std/stdlib/strings/: acoustic_guitar.vibe  bass_instruments.vibe  electric_guitar.vibe  harp.vibe  index.vibe  pizzicato.vibe  solo_cello.vibe  solo_violin.vibe  string_ensemble.vibe  tremolo_strings.vibe
crates/vibelang-std/stdlib/synths/: arp.vibe  cs80.vibe  dx7.vibe  index.vibe  juno.vibe  jupiter.vibe  memorymoog.vibe  minimoog.vibe  ms20.vibe  oberheim.vibe  odyssey.vibe  polysix.vibe  ppg_wave.vibe  pro_one.vibe  prophet.vibe  sh101.vibe  tb303.vibe
crates/vibelang-std/stdlib/textures/: index.vibe
crates/vibelang-std/stdlib/theory/: README.md  arpeggios.vibe  bass_patterns.vibe  chords.vibe  core.vibe  counterpoint.vibe  harmony.vibe  index.vibe  melody_gen.vibe  progressions.vibe  rhythm.vibe  scales.vibe  voice_leading.vibe
crates/vibelang-std/stdlib/utility/: click_track.vibe  index.vibe  lfo.vibe  metronome.vibe  noise_generators.vibe  noise_pink.vibe  noise_white.vibe  oscilloscope_tones.vibe  silence.vibe  test_tones.vibe  tuner.vibe
crates/vibelang-std/stdlib/world/: banjo.vibe  (+24 more)
(+573 files in other folders)
