[package]
name = "vibelang-cli"
version = "0.2.0"
edition = "2021"
description = "CLI binary for VibeLang - the vibe command"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trusch/vibelang"
keywords = ["music", "audio", "supercollider", "livecoding", "dsl"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
# Core runtime (state management, scheduling, OSC, Rhai API)
vibelang-core = "0.2.0"

# DSP layer (UGen generation, define_synthdef)
vibelang-dsp = "0.1.3"

# Standard library
vibelang-std = "0.1.5"

# LSP server
vibelang-lsp = "0.1.1"

# HTTP REST API server
vibelang-http = "0.1.1"

# Rhai scripting engine
rhai = { version = "1.17", features = ["sync", "internals"] }

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Signal handling
signal-hook = "0.3"

# TUI
ratatui = "0.30"
crossterm = "0.29"
chrono = "0.4"
crossbeam-channel = "0.5"

# Clipboard (for MIDI recording export)
arboard = "3.4"

# OS-level keyboard input (for virtual keyboard key release detection)
rdev = "0.5"

# Render command
tempfile = "3.10"
which = "8"
rosc = "0.11"
tar = "0.4"

# Async runtime (for LSP and HTTP)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
