[package]
name = "vibelang-core"
version = "0.1.6"
edition = "2021"
description = "Core types and state management for VibeLang"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trusch/vibelang"
keywords = ["music", "audio", "supercollider", "livecoding"]
categories = ["multimedia::audio"]

[features]
default = ["native"]
native = ["rosc", "jack", "midir", "cpal", "aubio-rs"]

[dependencies]
# SFZ support
vibelang-sfz = "0.1"

# DSP/Synthdef generation
vibelang-dsp = "0.1.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Concurrency
crossbeam-channel = "0.5"

# OSC for SuperCollider communication (native only)
rosc = { version = "0.11", optional = true }

# Randomness for patterns
rand = { version = "0.9", features = ["std", "std_rng"] }

# Logging
log = "0.4"

# Time parsing for durations
humantime = "2.1"

# Regex for step parsing
regex = "1.10"

# Scripting engine
rhai = { version = "1.17", default-features = false, features = ["std", "sync", "internals"] }

# Audio analysis (BPM detection) - native only
# Note: "bindgen" feature is required on macOS for compilation
aubio-rs = { version = "0.2", features = ["builtin", "bindgen"], optional = true }

# WAV file reading for BPM analysis
hound = "3.5"

# Tar archive for .vibescore format
tar = "0.4"

# MIDI input support (native only)
midir = { version = "0.10", optional = true }

# JACK audio/MIDI support (native only)
jack = { version = "0.13", optional = true }

# Audio device enumeration (native only)
cpal = { version = "0.17", optional = true }

[dev-dependencies]
env_logger = "0.11"
