[package]
name = "vibelang-http"
version = "0.1.0"
edition = "2021"
description = "HTTP REST API server for VibeLang"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trusch/vibelang"
keywords = ["music", "audio", "rest-api", "websocket"]
categories = ["multimedia::audio", "web-programming"]

[dependencies]
# Core runtime
vibelang-core = "0.1.6"

# HTTP framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# UUID for resource IDs
uuid = { version = "1.0", features = ["v4"] }
