[package]
name = "vibelang-lsp"
version = "0.1.1"
edition = "2021"
description = "Language Server Protocol implementation for VibeLang"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trusch/vibelang"
keywords = ["music", "audio", "lsp", "language-server"]
categories = ["development-tools"]

[dependencies]
# Core runtime (for validation)
vibelang-core = "0.2.0"

# Standard library (for stdlib path)
vibelang-std = "0.1.5"

# LSP server
tower-lsp = "0.20"
async-trait = "0.1"

# Document management
ropey = "1.6"
dashmap = "6"
regex = "1"

# Async runtime
tokio = { version = "1", features = ["io-std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
